--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-
 </head>
 
 <body>
@@ -76,7 +75,6 @@
                     <a href="#">Login</a>
                 </div>
             </nav>
-
         </div>
     </div>
     <div class="container-fluid">
@@ -91,22 +89,24 @@
             </div>
             <div class="body-right">
                 <h2>Get Started For Free</h2>
-                <p>Email</p>
-                <input class="box-input" type="email" name="Email" id="" placeholder="Nhập Email vào">
-                <p>Password</p>
-                <input class="box-input" type="password" name="Password" id="" placeholder="Nhập mật khẩu">
+                <p>Email <i class="fas fa-envelope"></i></p>
+                <input class="box-input" type="email" name="Email" id="" placeholder="   Input your Mail">
+                <p>Password <i class="fas fa-unlock-alt"></i></p>
+                <input class="box-input" type="password" name="Password" id="" placeholder="    Input your Password">
                 <button class="button-signup">Sign Up</button>
-                <p>By signing up for Codecademy, you agree to Codecademy's<a href="#">Terms of Service</a>
+                <p>By signing up for Codecademy, you agree to Codecademy's<a href="#"> Terms of Service</a>
                 </p>
                 <p>Or sign up using:</p>
-                <i class="fab fa-facebook-square"></i>
+
                 <tr>
-                    <a href=""><i class="fab fa-invision"></i></a>
+                    <a href="#"><i class="fab fa-facebook fa-3x mg-5"></i></a>
+                    <a href="#"><i class="fab fa-twitter fa-3x mg-3"></i></a>
+                    <a href="#"><i class="fas fa-mobile-alt fa-3x icon-margin"></i></a>
                 </tr>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class=" container-fluid">
         <div id="content">
             <div class="content-header">
                 <span>First, we invented the best system for learning to code.</span><br>
@@ -117,7 +117,8 @@
                     <img class="content-img" src="./assess/img/1.png" alt="">
                     <div class="content-body-text">
                         <h1 class="fontsize33">Choose what to learn</h1>
-                        <p class="fontsize18">From building websites to analyzing data, the choice is yours. Not
+                        <p class="fontsize18">From building websites to analyzing data, the choice
+                            is yours. Not
                             sure where to start? We'll
                             point you in the right
                             direction.</p>
@@ -128,7 +129,8 @@
                     <img src="./assess/img/2.png" alt="">
                     <div class="content-body-text">
                         <h1 class="fontsize33">Learn by doing</h1>
-                        <p class="fontsize18">No matter your experience level, you'll be writing real, working code in
+                        <p class="fontsize18">No matter your experience level, you'll be writing
+                            real, working code in
                             minutes.</p>
                     </div>
 
@@ -137,7 +139,8 @@
                     <img src="./assess/img/3.png" alt="">
                     <div class="content-body-text">
                         <h1 class="fontsize33">Get instant feedback</h1>
-                        <p class="fontsize18">Your code is tested as soon as you submit it, so you always know if you're
+                        <p class="fontsize18">Your code is tested as soon as you submit it, so you
+                            always know if you're
                             on the right track.</p>
                     </div>
 
@@ -146,7 +149,8 @@
                     <img src="./assess/img/4.png" alt="">
                     <div class="content-body-text">
                         <h1 class="fontsize33">Put your learning into practice</h1>
-                        <p class="fontsize18">Apply your learning with real-world projects and test your knowledge with
+                        <p class="fontsize18">Apply your learning with real-world projects and test
+                            your knowledge with
                             tailor-made quizzes.</p>
                     </div>
 
@@ -155,7 +159,8 @@
                     <img src="./assess/img/5.png" alt="">
                     <div class="content-body-text">
                         <h1 class="fontsize33">Land your dream job</h1>
-                        <p class="fontsize18">Coding skills have never been more in-demand. Learn everything you need to
+                        <p class="fontsize18">Coding skills have never been more in-demand. Learn
+                            everything you need to
                             take your career to the next level.</p>
                     </div>
                 </div>
@@ -164,7 +169,8 @@
     </div>
     <div id="Gioi-thieu">
         <div class="Gioi-thieu-text">
-            <span style="font-size: 4rem;">Tell us <span style="color: aquamarine;">why</span> you want to learn to
+            <span style="font-size: 4rem;">Tell us <span style="color: aquamarine;">why</span> you want to learn
+                to
                 code</span><br>
             <span style="font-size: 4rem;">We’ll show you <span style="color: rgb(255, 238, 0);">what</span> to
                 learn</span>
@@ -173,11 +179,11 @@
         <div class="Gioi-thieu-content">
             <div class="row" style="width: 90%;margin: 0 65px 0;">
                 <div class="col">
-                    <h2 style="text-align: center;">Web Development</h2>
+                    <h2 style="text-align: center;color:aqua">Web Development</h2>
                     <div>
                         <ul class="Gioi-thieu-select">
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
+                            <li style="color:rgb(255, 136, 0)">HTML/CSS</li>
+                            <li style="color:rgb(255, 136, 0)">JavaScript</li>
                         </ul>
                     </div>
                     <p>Master the languages of the web: HTML, CSS, and JavaScript. This path will prepare you to
@@ -187,11 +193,11 @@
                         build interactive web apps.</p>
                 </div>
                 <div class="col">
-                    <h2 style="text-align: center;">Programming and Computer Science</h2>
+                    <h2 style="text-align: center;color:aqua;">Programming and Computer Science</h2>
                     <div>
                         <ul class="Gioi-thieu-select">
-                            <li>Python</li>
-                            <li>Cmd Line</li>
+                            <li style="color:rgb(255, 251, 0)">Python</li>
+                            <li style="color:rgb(255, 251, 0)">Cmd Line</li>
                         </ul>
                     </div>
                     <p>Master the languages of the web: HTML, CSS, and JavaScript. This path will prepare you to
@@ -201,11 +207,11 @@
                         build interactive web apps.</p>
                 </div>
                 <div class="col">
-                    <h2 style="text-align: center;">Data Science</h2>
+                    <h2 style="text-align: center;color:aqua;">Data Science</h2>
                     <div>
                         <ul class="Gioi-thieu-select">
-                            <li>Python</li>
-                            <li>SQL</li>
+                            <li style="color:rgb(102, 255, 0)">Python</li>
+                            <li style="color:rgb(102, 255, 0)">SQL</li>
                         </ul>
                     </div>
                     <p>Master the languages of the web: HTML, CSS, and JavaScript. This path will prepare you to
@@ -217,6 +223,76 @@
             </div>
         </div>
     </div>
+    <div id="footer">
+        <div class="row" style="padding-right:10rem">
+            <div class="col mr-4">
+                <h5>COMPANY</h5>
+                <div class="footer-content">
+                    <a href="">About</a>
+                    <a href="">Careers</a>
+                    <a href="">Affiliates</a>
+                    <a href="">Shop</a>
+                </div>
+            </div>
+            <div class="col mr-4">
+                <h5>RESOURCES</h5>
+                <div class="footer-content">
+                    <a href="">Blog</a>
+                    <a href="">Cheatsheets</a>
+                    <a href="">Articles</a>
+                </div>
+            </div>
+            <div class="col mr-4">
+                <h5>COMMUNITY</h5>
+                <div class="footer-content">
+                    <a href="">Forums</a>
+                    <a href="">Chapters</a>
+                    <a href="">Events</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col mr-4">
+                <h5>Subjects</h5>
+                <div class="footer-content">
+                    <a href="">Web Development</a>
+                    <a href="">Data Science</a>
+                    <a href="">Computer Science</a>
+                    <a href="">Developer Tools</a>
+                    <a href="">Machine Learning</a>
+                    <a href="">Code Foundations</a>
+                    <a href="">Web Design</a>
+                </div>
+            </div>
+            <div class="col mr-4">
+                <h5>Languages</h5>
+                <div class="footer-content">
+                    <div class="row">
+                        <div class="col">
+                            <a href="">HTML & CSS</a>
+                            <a href="">Python</a>
+                            <a href="">JavaScript</a>
+                            <a href="">Java</a>
+                            <a href="">SQL</a>
+                            <a href="">Bash/Shell</a>
+                            <a href="">Ruby</a>
+                        </div>
+                        <div class="col">
+                            <a href="">C++</a>
+                            <a href="">R</a>
+                            <a href="">C#</a>
+                            <a href="">PHP</a>
+                            <a href="">Go</a>
+                            <a href="">Swift</a>
+                            <a href="">Kotlin</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
@@ -237,6 +313,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./css/style.css">Lbototarp
+        hasjdhjkghiu</script>
 </body>
 
 </html>
